--- a/GL_Lib/GL_Lib.vcxproj.filters
+++ b/GL_Lib/GL_Lib.vcxproj.filters
@@ -5,6 +5,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Archivos de recursos\glad">
+      <UniqueIdentifier>{5b3ba9ac-56d9-4c18-8e0a-5171c8cadc00}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -15,6 +18,9 @@
     </ClCompile>
     <ClCompile Include="src\window.cpp">
       <Filter>Archivos de recursos</Filter>
+    </ClCompile>
+    <ClCompile Include="src\glad\src\glad.c">
+      <Filter>Archivos de recursos\glad</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
