--- a/GL_Lib/GL_Lib.vcxproj.filters
+++ b/GL_Lib/GL_Lib.vcxproj.filters
@@ -1,37 +1,55 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Archivos de recursos">
+    <Filter Include="Source Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Archivos de recursos\glad">
+    <Filter Include="Source Files\glad">
       <UniqueIdentifier>{5b3ba9ac-56d9-4c18-8e0a-5171c8cadc00}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\utils">
+      <UniqueIdentifier>{cea24643-47f8-49b7-bfc8-5b32f4ddd667}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
-      <Filter>Archivos de recursos</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\renderer.cpp">
-      <Filter>Archivos de recursos</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\window.cpp">
-      <Filter>Archivos de recursos</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\glad\src\glad.c">
-      <Filter>Archivos de recursos\glad</Filter>
+      <Filter>Source Files\glad</Filter>
+    </ClCompile>
+    <ClCompile Include="src\shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\loader.cpp">
+      <Filter>Source Files\utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\deps.h">
-      <Filter>Archivos de recursos</Filter>
+      <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\renderer.h">
-      <Filter>Archivos de recursos</Filter>
+      <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\window.h">
-      <Filter>Archivos de recursos</Filter>
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\shader.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\loader.h">
+      <Filter>Source Files\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stb_image.h">
+      <Filter>Source Files\utils</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
