--- a/GL_Lib/GL_Lib.vcxproj
+++ b/GL_Lib/GL_Lib.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\animation.cpp" />
     <ClCompile Include="src\base_game.cpp" />
     <ClCompile Include="src\core.cpp" />
     <ClCompile Include="src\entity.cpp" />
@@ -36,6 +37,7 @@
     <ClCompile Include="src\window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\animation.h" />
     <ClInclude Include="src\base_game.h" />
     <ClInclude Include="src\core.h" />
     <ClInclude Include="src\deps.h" />
