add useful functions to animation

--- a/GL_Lib/GL_Lib.vcxproj.filters
+++ b/GL_Lib/GL_Lib.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClCompile Include="src\animation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\collisionManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\renderer.h">
@@ -115,6 +118,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\animation.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\collisionManager.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
